style.css
body
{
    font-family: 'Roboto', sans-serif;
    font-size: small;

    margin: 0;
    padding: 0;
}

h1
{
    font-family: 'Hero Main', sans-serif;

    font-weight: bolder;
    font-size: 250%;
}

h2
{
    font-weight: bold;
    font-size: 200%;
}

h3
{
    font-weight: bold;
    font-size: 150%;
}

a
{
    color: white;
    text-decoration: none;
}

ul
{
    list-style-type: none;
    margin: 0;
    padding: 0;
}

#header
{
    position: fixed;
    width: calc(100% - 3em);

    background-color: rgba(4, 21, 31, 0.8);

    padding-right: 3em;
    padding-top: 0.7em;
    padding-bottom: 0.7em;

    display: flex;
    align-items: center;
    justify-content: space-between;

    border-top: 2px solid #FF8C42;
    border-bottom: 2px solid #FF8C42;
}

.header-main
{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1em;
}

.header-main h2
{
    margin: 0;
}

#header a
{
    color: #FFF275;
}

#header a:hover
{
    text-decoration: underline aqua;
    text-underline-offset: 0.4em;
}

.icon
{
    width: 20%;
}

#header ul
{
    display: flex;
    gap: 1em;

    color: #E5E7EB;
    font-weight: lighter;
}

#header ul a
{
    color: white;
}

#header ul a:hover
{
    text-decoration: underline #FF8C42;
    text-underline-offset: 0.4em;
}

#header ul div
{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 0.3em;
}

#header-background
{
    margin-bottom: -0.21em;
}

#header-background img
{
    width: 100%;
    max-height: 300px;
}

#title
{
    background-color: #04151F;
    color: white;

    padding-left: 10em;
    padding-right: 10em;
    padding-top: 4em;
    padding-bottom: 6em;

    display: flex;
    justify-content: center;
    gap: 3em;

    border-top: 2px solid #FF8C42;
    border-bottom: 2px solid #FF8C42;
}

#title div
{
    flex: 1 1 50%;
}

.title-info
{
    display: flex;
    flex-direction: column;
    gap: 1em;
}

.title-info :is(h1, p)
{
    margin: 0;
    padding: 0;
}

.title-info h1
{
    color: #FFF275;
}

.title-info p
{
    font-weight: light;
    color: white;
}

.title-info button
{
    border: 2px solid #A23E48;
    border-radius: 5em;

    background-color: #A23E48;
    color: white;

    font-weight: bold;

    padding-left: 1.5em;
    padding-right: 1.5em;
    padding-top: 0.3em;
    padding-bottom: 0.3em;

    align-self: flex-start;
}

.title-image
{
    background-color: #5A7585;

    display: flex;
    justify-content: center;
    align-items: center;
}

#information
{
    padding-left: 10em;
    padding-right: 10em;
    padding-top: 1em;
    padding-bottom: 1em;

    display: flex;
    flex-direction: column;
    align-items: center;
}

#information ul
{
    display: flex;
    gap: 1em;
}

#quote
{
    padding-left: 10em;
    padding-right: 10em;
    padding-top: 5em;
    padding-bottom: 5em;

    background-color: #E5E7EB;
}

#quote figure blockquote
{
    margin: 0;

    font-size: 170%;
    color: #5A7585;
}

#quote figcaption
{
    margin-top: 1em;
    font-size: 110%;
    text-align: right;
}

#action
{
    margin-left: 10em;
    margin-right: 10em;
    margin-top: 4em;
    margin-bottom: 4em;

    padding-left: 5em;
    padding-right: 5em;
    padding-top: 2em;
    padding-bottom: 2em;

    background-color: #3298FE;
    border: 2px solid #3298FE;
    border-radius: 10px;

    display: flex;

    color: white;
}

.action-text
{
    flex: 1 1 70%;
    display: flex;
    flex-direction: column;
}

.action-text :is(h3, p)
{
    margin: 0;
    padding: 0;
}

.action-button
{
    flex: 1 1 30%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.action-button button
{
    background-color: #3298FE;
    color: white;
    font-weight: bold;
    border: 1px solid white;
    border-radius: 5px;

    padding-left: 1.5em;
    padding-right: 1.5em;
    padding-top: 0.4em;
    padding-bottom: 0.4em;
}

#footer
{
    background-color: #04151F;
    color: white;

    display: flex;
    justify-content: center;
    align-items: center;

    padding-top: 1em;
    padding-bottom: 1em;
}

